--- a/config.json
+++ b/config.json
@@ -11,6 +11,7 @@
         "Invite": "",
         "AdminIDRole": "",
         "AnnouncementChannelID": "",
-        "SuggestionChannelID": "" 
+        "SuggestionChannelID": "" ,
+        "OwnerID": ""
     }
 }
