--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "discord-buttons": "^4.0.0",
     "discord-giveaways": "^4.5.1",
+    "discord-reply": "^0.1.2",
     "discord.js": "^12.5.3",
     "edit-json-file": "^1.6.2",
     "forever-monitor": "^3.0.3",
@@ -31,6 +32,7 @@
     "nvm": "0.0.4",
     "path": "^0.12.7",
     "pull": "^2.1.1",
+    "quick.db": "^7.1.3",
     "replace": "^1.2.1"
   }
 }
