--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": ""
   },
   "author": "Cypissekk",
-  "license": "MIT",
+  "license": "ISC",
   "dependencies": {
     "discord-buttons": "^4.0.0",
     "discord-giveaways": "^4.5.1",
